deprecated constructor is not used nay more